styles.css
* {
    margin: 0;
    font-family: 'Style Script', cursive;
    box-sizing: border-box;
    color: #3d3012;
}

body {
    display: flex;
    background-image: linear-gradient(45deg,#ff6c52, #ff82e4, #686afc);
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center;
}

#container {
    height: 55%;
    aspect-ratio: 1/1;
    border-radius: 2rem;
    background: rgba(168, 255, 236, 0.4);
    padding: 2em;
    font-size: 2rem;
    position: relative;
    max-width: 100vw;
}

button {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 0.5em;
    padding: 0.2em;
    border-radius: 0.5rem;
    font-size: 1.5rem;
    border: 1px solid #99ff40;
    background: radial-gradient(#e0ffc4, #ffffff);
    transition: background 1s ease-in-out;
}

button:hover{
    background: #e0ffc4;
    transition: background 1s ease-in;
}

